Create a subscription instead of a one off charge

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -22,11 +22,11 @@
           RAM
         %li.plan-action
           = form_tag supporters_path do
-            = hidden_field_tag :price, 2900
+            = hidden_field_tag :plan_id, :basic
             %script{src: "https://checkout.stripe.com/checkout.js", class: "stripe-button",
                     data: {key: Rails.configuration.stripe[:publishable_key],
                            description: "Basic supporter",
-                           amount: "2900",
+                           amount: "1400",
                            email: current_user.email}}
 
     .col-xs-3.col-centered
