Center heading of page

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -1,5 +1,6 @@
 .container
-  %h1.page-header Become a supporter
+  .page-header
+    %h1.text-center Become a supporter
   %p &#160;
   .row.pricing.row-centered
     .col-xs-3.col-centered
