--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -22,13 +22,13 @@
           %strong Forum
           Support
         %li.plan-action
-          = form_tag supporters_path do
+          = form_tag supporters_path, id: "basic-signup-form" do
+            = button_tag "Signup", class: "btn btn-default btn-lg",
+                                   data: {key: Rails.configuration.stripe[:publishable_key],
+                                          description: "Basic supporter",
+                                          amount: "1400",
+                                          email: current_user.email}
             = hidden_field_tag :plan_id, :basic
-            %script{src: "https://checkout.stripe.com/checkout.js", class: "stripe-button",
-                    data: {key: Rails.configuration.stripe[:publishable_key],
-                           description: "Basic supporter",
-                           amount: "1400",
-                           email: current_user.email}}
 
     .col-xs-3.col-centered
       %ul.plan.plan2.featured
