Make heights of columns more consistent

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -16,11 +16,11 @@
           %strong Feel
           the warm and fuzzies
         %li
+          %strong Shows
+          your support publically
+        %li
           %strong Forum
           Support
-        %li
-          %strong 1GB
-          RAM
         %li.plan-action
           = form_tag supporters_path do
             = hidden_field_tag :plan_id, :basic
@@ -43,11 +43,11 @@
           %strong Feel
           the warm and fuzzies
         %li
+          %strong Be featured
+          on the landing page
+        %li
           %strong Forum
           Support
-        %li
-          %strong 1GB
-          RAM
         %li.plan-action
           %a.btn.btn-default.btn-lg{:href => "#"} Signup
 
@@ -65,8 +65,8 @@
           %strong Feel
           the warm and fuzzies
         %li
-          %strong Forum
-          Support
+          %strong Be featured
+          on the landing page
         %li
           %strong Priority
           technical support
