--- a/app/assets/stylesheets/supporters.css.scss
+++ b/app/assets/stylesheets/supporters.css.scss
@@ -71,3 +71,10 @@
     /* inline-block space fix */
     margin-right:-4px;
 }
+
+.plan-questions {
+  margin-top: 6em;
+  padding-top: 2em;
+  padding-bottom: 2em;
+  background-color: #b1d05f;
+}
