--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -73,23 +73,25 @@
         %li.plan-action
           %a.btn.btn-default.btn-lg{:href => "#"} Signup
 
-  .row
-    .col-md-6.col-md-offset-3
-      %h3 What is priority technical support?
-      %p Lorem ipsum...
-      %h3 Is this tax deductible?
-      %p
-        If you are an Australian resident and you are supporting at the "..." or
-        "..." level your regular donation is tax-deductible.
-      %h3 I don't see a supporter level that fits my budget
-      %p
-        These are our standard prices, but we're more than happy to figure out
-        something that's right for you. Feel free to
-        = mail_to 'contact@oaf.org.au', 'drop us a line'
-        and tell us
-        what you're looking for.
-      %p
-        If you would like to pick your own support level or make
-        a one-off donation to the OpenAustralia Foundation then please visit
-        the
-        #{link_to 'OpenAustralia Foundation donate page', "https://www.openaustraliafoundation.org.au/donate/"}.
+.plan-questions
+  .container
+    .row
+      .col-md-6.col-md-offset-3
+        %h3 What is priority technical support?
+        %p Lorem ipsum...
+        %h3 Is this tax deductible?
+        %p
+          If you are an Australian resident and you are supporting at the "..." or
+          "..." level your regular donation is tax-deductible.
+        %h3 I don't see a supporter level that fits my budget
+        %p
+          These are our standard prices, but we're more than happy to figure out
+          something that's right for you. Feel free to
+          = mail_to 'contact@oaf.org.au', 'drop us a line'
+          and tell us
+          what you're looking for.
+        %p
+          If you would like to pick your own support level or make
+          a one-off donation to the OpenAustralia Foundation then please visit
+          the
+          #{link_to 'OpenAustralia Foundation donate page', "https://www.openaustraliafoundation.org.au/donate/"}.
