Make the writing more legible on the supports page

--- a/app/assets/stylesheets/supporters.css.scss
+++ b/app/assets/stylesheets/supporters.css.scss
@@ -16,7 +16,7 @@
     text-align: center;
     li {
       padding: 10px 15px;
-      color: #ccc;
+      color: #888;
       border-top: 1px solid #fff;
       -webkit-transition: 300ms;
       transition: 300ms;
