Make price a little bigger

--- a/app/assets/stylesheets/supporters.css.scss
+++ b/app/assets/stylesheets/supporters.css.scss
@@ -23,6 +23,7 @@
     }
     li.plan-price {
       border-top: 0;
+      font-size: 1.5em;
     }
     li.plan-name {
       border-radius: 6px 6px 0 0;
