--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -42,7 +42,7 @@
         - if signed_in?
           .pull-right= render partial: "watch_button", locals: {owner: @owner}
     - if current_user && current_user.see_support_levels
-      - if @owner.stripe_plan_id      
+      - if !@owner.stripe_plan_id.blank?
         .row
           .col-md-12
             %p
