--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -47,7 +47,7 @@
           .col-md-12
             %p
               = link_to new_supporter_path do
-                %i.fa.fa-trophy.fa-3x.fa-inverse
+                = plan_image_tag(@owner.stripe_plan_id)
                 = human_plan_name(@owner.stripe_plan_id)
 
 .container
