Add crude badges to sign up page

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -11,6 +11,7 @@
         %ul.plan.plan1
           %li.plan-name
             Basic
+            = plan_image_tag(:basic)
           %li.plan-price
             %strong $14
             \/ month
@@ -37,6 +38,7 @@
         %ul.plan.plan2.featured
           %li.plan-name
             Standard
+            = plan_image_tag(:standard)
           %li.plan-price
             %strong $24
             \/ month
@@ -63,6 +65,7 @@
         %ul.plan.plan3
           %li.plan-name
             Advanced
+            = plan_image_tag(:advanced)
           %li.plan-price
             %strong $149
             \/ month
