--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -46,9 +46,8 @@
         .row
           .col-md-12
             %p
-              = link_to new_supporter_path do
-                = plan_image_tag(@owner.stripe_plan_id)
-                = human_plan_name(@owner.stripe_plan_id)
+              = link_to plan_image_tag(@owner.stripe_plan_id), new_supporter_path
+              = link_to human_plan_name(@owner.stripe_plan_id), new_supporter_path
 
 .container
   - if @scrapers.empty?
