--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -27,12 +27,9 @@
             %strong Forum
             Support
           %li.plan-action
-            = button_tag "Signup", class: "btn btn-default btn-lg",
-                                   data: {key: Rails.configuration.stripe[:publishable_key],
-                                          description: "Basic supporter",
-                                          amount: "1400",
-                                          email: current_user.email,
-                                          plan_id: :basic}
+            = render partial: "plan_action", locals: { description: "Basic supporter",
+                                                       amount: 1400,
+                                                       plan_id: "basic" }
 
       .col-xs-3.col-centered
         %ul.plan.plan2.featured
@@ -54,12 +51,9 @@
             %strong Forum
             Support
           %li.plan-action
-            = button_tag "Signup", class: "btn btn-default btn-lg",
-                                   data: {key: Rails.configuration.stripe[:publishable_key],
-                                          description: "Standard supporter",
-                                          amount: "2400",
-                                          email: current_user.email,
-                                          plan_id: :standard}
+            = render partial: "plan_action", locals: { description: "Standard supporter",
+                                                       amount: 2400,
+                                                       plan_id: "standard" }
 
       .col-xs-3.col-centered
         %ul.plan.plan3
@@ -82,12 +76,9 @@
             %strong Priority
             technical support
           %li.plan-action
-            = button_tag "Signup", class: "btn btn-default btn-lg",
-                                   data: {key: Rails.configuration.stripe[:publishable_key],
-                                          description: "Advanced supporter",
-                                          amount: "14900",
-                                          email: current_user.email,
-                                          plan_id: :advanced}
+            = render partial: "plan_action", locals: { description: "Advanced supporter",
+                                                       amount: 14900,
+                                                       plan_id: "advanced" }
 
 .plan-questions
   .container
