--- a/app/views/supporters/_plan_action.html.haml
+++ b/app/views/supporters/_plan_action.html.haml
@@ -1,6 +1,10 @@
-= button_tag "Signup", class: "btn btn-default btn-lg",
-                       data: {key: Rails.configuration.stripe[:publishable_key],
-                              description: description,
-                              amount: amount,
-                              email: current_user.email,
-                              plan_id: plan_id}
+- if current_user.stripe_plan_id == plan_id
+  %strong You're awesome!
+  This is what you're already signed up to
+- else
+  = button_tag "Signup", class: "btn btn-default btn-lg",
+                         data: {key: Rails.configuration.stripe[:publishable_key],
+                                description: description,
+                                amount: amount,
+                                email: current_user.email,
+                                plan_id: plan_id}
