Add the ability for existing users to update their support level
Closes #817.

--- a/app/views/supporters/_plan_action.html.haml
+++ b/app/views/supporters/_plan_action.html.haml
@@ -7,4 +7,5 @@
                                 description: description,
                                 amount: amount,
                                 email: current_user.email,
-                                plan_id: plan_id}
+                                plan_id: plan_id,
+                                stripe: !current_user.supporter? }
