--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -7,7 +7,7 @@
         Become a supporter
   %p &#160;
   .row.pricing.row-centered
-    = form_tag supporters_path, id: "supporter-signup-form" do
+    = form_tag (current_user.supporter? ? supporter_path(current_user) : supporters_path), id: "supporter-signup-form", method: (current_user.supporter? ? :patch : :post) do
       = hidden_field_tag "stripeToken"
       = hidden_field_tag :plan_id
 
