--- a/app/views/supporters/_plan_action.html.haml
+++ b/app/views/supporters/_plan_action.html.haml
@@ -2,10 +2,11 @@
   %strong You're awesome!
   This is what you're already signed up to
 - else
-  = button_tag signup_button_label(amount), class: "btn btn-default btn-lg",
-                         data: {key: Rails.configuration.stripe[:publishable_key],
-                                description: description,
-                                amount: amount,
-                                email: current_user.email,
-                                plan_id: plan_id,
-                                stripe: !current_user.supporter? }
+  = button_tag plan_change_word(current_user.stripe_plan_id, plan_id),
+               class: "btn btn-default btn-lg",
+               data: {key: Rails.configuration.stripe[:publishable_key],
+                      description: description,
+                      amount: amount,
+                      email: current_user.email,
+                      plan_id: plan_id,
+                      stripe: !current_user.supporter? }
