--- a/app/views/supporters/_create_flash.html.haml
+++ b/app/views/supporters/_create_flash.html.haml
@@ -1,1 +1,1 @@
-Thanks for becoming a supporter, you've been charged #{number_in_cents_to_currency @price}.
+Woohoo! Very nice person you are, thanks for becoming a supporter.
