Add some emotion to the upgrade or downgrade flash

--- a/app/views/supporters/_update_flash.html.haml
+++ b/app/views/supporters/_update_flash.html.haml
@@ -1,1 +1,2 @@
+= joy_or_disappointment(@from_plan, @to_plan)
 Your support level has been changed to #{human_plan_name(current_user.stripe_plan_id)}.
