--- a/app/views/supporters/_update_flash.html.haml
+++ b/app/views/supporters/_update_flash.html.haml
@@ -1,2 +1,4 @@
 = joy_or_disappointment(@from_plan, @to_plan)
-Your support level has been changed to #{human_plan_name(current_user.stripe_plan_id)}.
+Your support level has been
+= plan_change_word_past_tense(@from_plan, @to_plan).downcase
+to #{human_plan_name(current_user.stripe_plan_id)}.
