--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -87,8 +87,8 @@
       Monthly contribution not right for you?
       = link_to 'Make a one time contribution', '#supporter-one-time-form',
         data: {toggle: "collapse"}
-    = form_tag supporters_path, id: "supporter-one-time-form", class: 'form-inline collapse'  do
-      = hidden_field_tag "stripeToken"
+    = form_tag create_one_time_supporters_path, id: "supporter-one-time-form", class: 'form-inline collapse'  do
+      = hidden_field_tag "stripeTokenOneTime"
       .form-group
         = label_tag 'amount', 'Amount (in US dollars)', class: 'sr-only'
         .input-group
