Move vendored CSS to correct directory

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,7 +4,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
-@import "vendor/tablesaw.stackonly";
+@import "tablesaw.stackonly";
 
 @import "global/typography";
 @import "global/site-header";
