--- a/app/views/supporters/_update_flash.html.haml
+++ b/app/views/supporters/_update_flash.html.haml
@@ -1,4 +1,4 @@
 = joy_or_disappointment(@from_plan, @to_plan)
 Your support level has been
 = plan_change_word_past_tense(@from_plan, @to_plan).downcase
-to #{Plan.new(current_user.stripe_plan_id).name}.
+to #{current_user.plan.name}.
