--- a/app/views/supporters/_plan_action.html.haml
+++ b/app/views/supporters/_plan_action.html.haml
@@ -2,7 +2,7 @@
   %strong You're awesome!
   This is what you're already signed up to
 - else
-  = button_tag plan_change_word(current_user.stripe_plan_id, plan_id),
+  = button_tag plan_change_word(current_user.plan, Plan.new(plan_id)),
                class: "btn btn-default btn-lg",
                data: {key: Rails.configuration.stripe[:publishable_key],
                       description: description,
