--- a/app/views/supporters/_plan_action.html.haml
+++ b/app/views/supporters/_plan_action.html.haml
@@ -1,12 +1,12 @@
-- if Plan.new(current_user.stripe_plan_id) == Plan.new(plan_id)
+- if current_user.plan == plan
   %strong You're awesome!
   This is what you're already signed up to
 - else
-  = button_tag plan_change_word(current_user.plan, Plan.new(plan_id)),
+  = button_tag plan_change_word(current_user.plan, plan),
                class: "btn btn-default btn-lg",
                data: {key: Rails.configuration.stripe[:publishable_key],
                       description: description,
                       amount: amount,
                       email: current_user.email,
-                      plan_id: plan_id,
+                      plan_id: plan.stripe_plan_id,
                       stripe: !current_user.supporter? }
