Replace lorem ipsum with example of what priority support might be
See #836.

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -104,4 +104,7 @@
     .row
       .col-md-6.col-md-offset-3
         %h3 What is priority technical support?
-        %p Lorem ipsum...
+        %p
+          Post any question you have to the forum and we guarantee a response within
+          two working days. You'll also get up to two hours personal assistance per
+          month for scraper help, bugfixes, or feature development on morph.io.
