Make design a bit more balanced by having three lines of text for the starter plan

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -19,7 +19,8 @@
             %strong= number_to_currency(Plan.new('morph_basic').price, precision: 0)
             \/ month
           %li.plan-reason
-            Supporters keep morph.io open and running and available to all
+            Support morph.io on a budget. Keep morph.io open and running and
+            available to all
           %li
             %strong Feel
             the warm and fuzzies
