--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -96,7 +96,7 @@
         .input-group
           .input-group-addon $
           = number_field_tag 'amount', 20, placeholder: 'Amount', class: 'form-control'
-      = button_tag "Contribute", class: "btn btn-default",
+      = button_tag "Contribute", class: "btn btn-success",
         data: {key: Rails.configuration.stripe[:publishable_key],
               email: current_user.email}
 
