Link to the Foundation so you can find out more easily

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -9,7 +9,9 @@
     .col-md-8.col-md-offset-2
       %p
         morph.io is free for everyone.
-        It's created and run by the charity OpenAustralia Foundation for the public good and in particular the international civic tech community.
+        It's created and run by the charity
+        = link_to "OpenAustralia Foundation", "https://www.openaustraliafoundation.org.au/"
+        for the public good and in particular the international civic tech community.
         However it does cost money to run and develop this service so you can ensure its continues to thrive by becoming a supporter.
         We'll even provide priority support to our most dedicated supporters.
   .row.pricing.row-centered
