Bold for emphasis and scanability

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -8,7 +8,8 @@
   .row
     .col-md-8.col-md-offset-2
       %p
-        morph.io is free for everyone.
+        morph.io is
+        %strong free for everyone.
         It's created and run by the charity
         = link_to "OpenAustralia Foundation", "https://www.openaustraliafoundation.org.au/"
         for the public good and in particular the international civic tech community.
