--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -12,7 +12,7 @@
         %strong free for everyone.
         It's created and run by the charity
         = link_to "OpenAustralia Foundation", "https://www.openaustraliafoundation.org.au/"
-        for the public good and in particular the international civic tech community.
+        because we love the international civic tech community.
         However it does cost money to run and develop this service so you can ensure its continues to thrive by becoming a supporter.
         We'll even provide priority support to our most dedicated supporters.
   .row.pricing.row-centered
