Remove superfluous word

--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -12,7 +12,7 @@
         %strong free for everyone.
         It's created and run by the charity
         = link_to "OpenAustralia Foundation", "https://www.openaustraliafoundation.org.au/"
-        because we love the international civic tech community.
+        because we love the civic tech community.
         However it costs money to run and develop this service.
         You can ensure it continues to thrive by becoming a supporter.
         We'll even provide priority support to our most dedicated supporters.
