--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -13,8 +13,7 @@
         It's created and run by the charity
         = link_to "OpenAustralia Foundation", "https://www.openaustraliafoundation.org.au/"
         because we love the civic tech community.
-        However it costs money to run and develop this service.
-        You can ensure it continues to thrive by becoming a supporter.
+        By becoming a supporter you can help us make it even more incredibly useful.
   .row.pricing.row-centered
     = form_tag (current_user.supporter? ? supporter_path(current_user) : supporters_path), id: "supporter-signup-form", method: (current_user.supporter? ? :patch : :post) do
       = hidden_field_tag "stripeToken"
