--- a/app/views/supporters/new.html.haml
+++ b/app/views/supporters/new.html.haml
@@ -1,7 +1,7 @@
 .container
   .page-header
     %h1.text-center
-      - if current_user.supporter?
+      - if user_signed_in? && current_user.supporter?
         Thanks for being a supporter
       - else
         Become a supporter
@@ -15,99 +15,31 @@
         because we love the civic tech community.
         By becoming a supporter you can help us make it even more incredibly useful.
   .row.pricing.row-centered
-    = form_tag (current_user.supporter? ? supporter_path(current_user) : supporters_path), id: "supporter-signup-form", method: (current_user.supporter? ? :patch : :post) do
-      = hidden_field_tag "stripeToken"
-      = hidden_field_tag :plan_id, params[:plan_id]
+    - if user_signed_in?
+      = form_tag (current_user.supporter? ? supporter_path(current_user) : supporters_path), id: "supporter-signup-form", method: (current_user.supporter? ? :patch : :post) do
+        = hidden_field_tag "stripeToken"
+        = hidden_field_tag :plan_id, params[:plan_id]
 
-      .col-xs-3.col-centered
-        %ul.plan.plan1
-          %li.plan-name
-            = plan_image_tag(Plan.new('morph_basic'))
-            Basic
-          %li.plan-price
-            %strong= number_to_currency(Plan.new('morph_basic').price, precision: 0)
-            \/ month
-          %li.plan-reason
-            Support morph.io on a budget. Keep morph.io open and running and
-            available to all
-          %li
-            %strong Feel
-            the warm and fuzzies
-          %li
-            %strong Shows
-            your support publically
-          %li
-            %strong Forum
-            Support
-          %li.plan-action
-            = render partial: "plan_action", locals: { description: "Basic supporter",
-                                                       amount: 1400,
-                                                       plan: Plan.new("morph_basic") }
+        = render partial: "plans"
+    - else
+      = render partial: "plans"
 
-      .col-xs-3.col-centered
-        %ul.plan.plan2.featured
-          %li.plan-name
-            = plan_image_tag(Plan.new('morph_standard'))
-            Standard
-          %li.plan-price
-            %strong= number_to_currency(Plan.new('morph_standard').price, precision: 0)
-            \/ month
-          %li.plan-reason
-            Support continued development of the open-source software that powers morph.io
-          %li
-            %strong Feel
-            the warm and fuzzies
-          %li
-            %strong Be featured
-            on the landing page
-          %li
-            %strong Forum
-            Support
-          %li.plan-action
-            = render partial: "plan_action", locals: { description: "Standard supporter",
-                                                       amount: 2400,
-                                                       plan: Plan.new("morph_standard") }
-
-      .col-xs-3.col-centered
-        %ul.plan.plan3
-          %li.plan-name
-            = plan_image_tag(Plan.new('morph_advanced'))
-            Advanced
-          %li.plan-price
-            %strong= number_to_currency(Plan.new('morph_advanced').price, precision: 0)
-            \/ month
-          %li.plan-reason
-            Rely on morph.io for your business or not-for-profit? Priority technical support
-            to get you answers and fixes quickly
-          %li
-            %strong Feel
-            the warm and fuzzies
-          %li
-            %strong Be featured
-            on the landing page
-          %li
-            %strong Priority
-            technical support
-          %li.plan-action
-            = render partial: "plan_action", locals: { description: "Advanced supporter",
-                                                       amount: 14900,
-                                                       plan: Plan.new("morph_advanced") }
-
-  .row.one-time-contribution
-    %p
-      Monthly contribution not right for you?
-      = link_to 'Make a one time contribution', '#supporter-one-time-form',
-        data: {toggle: "collapse"}
-    = form_tag create_one_time_supporters_path, id: "supporter-one-time-form", class: 'form-inline collapse'  do
-      = hidden_field_tag "stripeTokenOneTime"
-      .form-group
-        = label_tag 'amount', 'Amount (in US dollars)', class: 'sr-only'
-        .input-group
-          .input-group-addon $
-          = number_field_tag 'amount', 20, placeholder: 'Amount', class: 'form-control'
-      = button_tag "Contribute", class: "btn btn-success",
-        data: {key: Rails.configuration.stripe[:publishable_key],
-              email: current_user.email}
+  - if user_signed_in?
+    .row.one-time-contribution
+      %p
+        Monthly contribution not right for you?
+        = link_to 'Make a one time contribution', '#supporter-one-time-form',
+          data: {toggle: "collapse"}
+      = form_tag create_one_time_supporters_path, id: "supporter-one-time-form", class: 'form-inline collapse'  do
+        = hidden_field_tag "stripeTokenOneTime"
+        .form-group
+          = label_tag 'amount', 'Amount (in US dollars)', class: 'sr-only'
+          .input-group
+            .input-group-addon $
+            = number_field_tag 'amount', 20, placeholder: 'Amount', class: 'form-control'
+        = button_tag "Contribute", class: "btn btn-success",
+          data: {key: Rails.configuration.stripe[:publishable_key],
+                email: current_user.email}
 
 .plan-questions
   .container
