--- a/app/views/documentation/_format.html.haml
+++ b/app/views/documentation/_format.html.haml
@@ -1,4 +1,6 @@
 %p
-  Write to a table <code>#{Morph::Database.sqlite_table_name}</code> in an sqlite database in the
-  current working directory called <code>#{Morph::Database.sqlite_db_filename}</code>.
-  How you do that and what fields you include is entirely up to you.
+  Have your scraper create a SQLite database in the current working directory called
+  <code>#{Morph::Database.sqlite_db_filename}</code>.
+  How your scraper does that and what tables or fields you include is entirely up to you.
+  If there's a table called <code>#{Morph::Database.sqlite_table_name}</code>
+  then we'll show that on your scraper page first.
