--- a/app/views/layouts/documentation.html.haml
+++ b/app/views/layouts/documentation.html.haml
@@ -5,15 +5,15 @@
     .row
       .col-md-2
         %ul.nav.nav-pills.nav-stacked#sidebar
-          = bs_nav_link "Main documentation", documentation_index_path
-          = bs_nav_link "What's New", what_is_new_documentation_index_path
-          = bs_nav_link "How to use the API", api_documentation_index_path
+          = bs_nav_link "Getting started", documentation_index_path
           -# TODO: Use the language list to generate this automatically
           = bs_nav_link language_name_with_icon(:ruby, size: "20x20"), ruby_documentation_index_path
           = bs_nav_link language_name_with_icon(:php, size: "20x20"), php_documentation_index_path
           = bs_nav_link language_name_with_icon(:perl, size: "20x20"), perl_documentation_index_path
           = bs_nav_link language_name_with_icon(:python, size: "20x20"), python_documentation_index_path
           = bs_nav_link language_name_with_icon(:nodejs, size: "20x20"), nodejs_documentation_index_path
+          = bs_nav_link "How to use the API", api_documentation_index_path
+          = bs_nav_link "What's New", what_is_new_documentation_index_path
       .col-md-10
         = yield
 = render template: "layouts/application"
