--- a/app/views/documentation/index.html.haml
+++ b/app/views/documentation/index.html.haml
@@ -50,6 +50,14 @@
 
 .row
   .col-sm-9
+    %h3.section#watching Watching scrapers for errors
+    :markdown
+      #{render "watching.md"}
+  .col-sm-3
+    = improve_button "Improve this section", "_watching.md"
+
+.row
+  .col-sm-9
     %h3.section#open_downloads See who is using the data
     :markdown
       #{render "open_downloads.md"}
