--- a/app/views/documentation/secret_values.html.haml
+++ b/app/views/documentation/secret_values.html.haml
@@ -63,31 +63,12 @@
 
   .tab-content
     .tab-pane.active#ruby(role="tabpanel")
-      %code
-        %pre
-          :preserve
-            # Use my secret value
-            my_secret_value = ENV['MORPH_MYSECRET']
-
+      = render "documentation/reading_secret_values/ruby"
     .tab-pane#php(role="tabpanel")
-      .alert.alert-warning
-        %i.fa.fa-bell-o.fa-lg.pull-left
-        Missing documentation. Help out by providing a code snippet.
-
+      = render "documentation/reading_secret_values/php"
     .tab-pane#perl(role="tabpanel")
-      .alert.alert-warning
-        %i.fa.fa-bell-o.fa-lg.pull-left
-        Missing documentation. Help out by providing a code snippet.
-
+      = render "documentation/reading_secret_values/perl"
     .tab-pane#python(role="tabpanel")
-      %code
-        %pre
-          :preserve
-            import os
-            # Use my secret variable
-            my_secret_value = os.environ['MORPH_MYSECRET']
-
+      = render "documentation/reading_secret_values/python"
     .tab-pane#nodejs(role="tabpanel")
-      .alert.alert-warning
-        %i.fa.fa-bell-o.fa-lg.pull-left
-        Missing documentation. Help out by providing a code snippet.
+      = render "documentation/reading_secret_values/nodejs"
