Step through all the languages

--- a/app/views/documentation/secret_values.html.haml
+++ b/app/views/documentation/secret_values.html.haml
@@ -45,30 +45,12 @@
 
 %div
   %ul.nav.nav-tabs(role="tablist")
-    %li.active(role="presentation")
-      = link_to '#ruby', 'aria-controls' => "ruby", role: "tab", 'data-toggle' => "tab" do
-        = language_name_with_icon(:ruby, size: "20x20")
-    %li(role="presentation")
-      = link_to '#php', 'aria-controls' => "php", role: "tab", 'data-toggle' => "tab" do
-        = language_name_with_icon(:php, size: "20x20")
-    %li(role="presentation")
-      = link_to '#perl', 'aria-controls' => "perl", role: "tab", 'data-toggle' => "tab" do
-        = language_name_with_icon(:perl, size: "20x20")
-    %li(role="presentation")
-      = link_to '#python', 'aria-controls' => "python", role: "tab", 'data-toggle' => "tab" do
-        = language_name_with_icon(:python, size: "20x20")
-    %li(role="presentation")
-      = link_to '#nodejs', 'aria-controls' => "nodejs", role: "tab", 'data-toggle' => "tab" do
-        = language_name_with_icon(:nodejs, size: "20x20")
+    - Morph::Language.languages_supported.each_with_index do |l, i|
+      %li{role: "presentation", class: ("active" if i == 0)}
+        = link_to "#reading-#{l.key}", 'aria-controls' => "#reading-#{l.key}", role: "tab", 'data-toggle' => "tab" do
+          = language_name_with_icon(l.key, size: "20x20")
 
   .tab-content
-    .tab-pane.active#ruby(role="tabpanel")
-      = render "documentation/reading_secret_values/ruby"
-    .tab-pane#php(role="tabpanel")
-      = render "documentation/reading_secret_values/php"
-    .tab-pane#perl(role="tabpanel")
-      = render "documentation/reading_secret_values/perl"
-    .tab-pane#python(role="tabpanel")
-      = render "documentation/reading_secret_values/python"
-    .tab-pane#nodejs(role="tabpanel")
-      = render "documentation/reading_secret_values/nodejs"
+    - Morph::Language.languages_supported.each_with_index do |l, i|
+      .tab-pane{role: "tabpanel", id: "reading-#{l.key}", class: ('active' if i == 0)}
+        = render "documentation/reading_secret_values/#{l.key}"
