--- a/app/views/documentation/secret_values.html.haml
+++ b/app/views/documentation/secret_values.html.haml
@@ -54,3 +54,16 @@
     - Morph::Language.languages_supported.each_with_index do |l, i|
       .tab-pane{role: "tabpanel", id: "reading-#{l.key}", class: ('active' if i == 0)}
         = render "documentation/reading_secret_values/#{l.key}"
+
+:markdown
+  ### Examples
+  Sometimes there's nothing like seeing a real-life example. Here are some
+  scrapers that use secret values. If you have a scraper you would like to add
+  to this list, please #{mail_to "contact@oaf.org.au", "let us know"}.
+
+- if Scraper.find_by(full_name: 'maxious/cat_photos')
+  = render Scraper.find_by(full_name: 'maxious/cat_photos')
+- if Scraper.find_by(full_name: 'philipnye/free-school-ofsted-ratings-output-test')
+  = render Scraper.find_by(full_name: 'philipnye/free-school-ofsted-ratings-output-test')
+- if Scraper.find_by(full_name: 'mlandauer/australian_food_products')
+  = render Scraper.find_by(full_name: 'mlandauer/australian_food_products')
