Add a link to the documentation on the scraper settings page

--- a/app/views/scrapers/_settings.html.haml
+++ b/app/views/scrapers/_settings.html.haml
@@ -4,6 +4,7 @@
   %h3 Secret environment variables
   %p
     Environment variables can be used to pass secret values to your scraper such as API keys.
+    = link_to 'Read documentation', secret_values_documentation_index_path
   .row
     .col-sm-3
       %label Name
