--- a/app/views/documentation/reading_secret_values/_php.html.haml
+++ b/app/views/documentation/reading_secret_values/_php.html.haml
@@ -1,3 +1,4 @@
-.alert.alert-warning
-  %i.fa.fa-bell-o.fa-lg.pull-left
-  Missing documentation. Help out by providing a code snippet.
+%pre
+  :preserve
+    // Use my secret value
+    $my_secret_value = getenv('MORPH_MYSECRET');
