Add Perl environment variable example

--- a/app/views/documentation/reading_secret_values/_perl.html.haml
+++ b/app/views/documentation/reading_secret_values/_perl.html.haml
@@ -1,3 +1,4 @@
-.alert.alert-warning
-  %i.fa.fa-bell-o.fa-lg.pull-left
-  Missing documentation. Help out by providing a code snippet.
+%pre
+  :preserve
+    # Use my secret value
+    my $my_secret_value = $ENV{'MORPH_MYSECRET'};
