--- a/app/views/documentation/secret_values.html.haml
+++ b/app/views/documentation/secret_values.html.haml
@@ -43,17 +43,7 @@
 :markdown
   ### Reading secret values in your scraper
 
-%div
-  %ul.nav.nav-tabs(role="tablist")
-    - Morph::Language.languages_supported.each_with_index do |l, i|
-      %li{role: "presentation", class: ("active" if i == 0)}
-        = link_to "#reading-#{l.key}", 'aria-controls' => "#reading-#{l.key}", role: "tab", 'data-toggle' => "tab" do
-          = language_name_with_icon(l.key, size: "20x20")
-
-  .tab-content
-    - Morph::Language.languages_supported.each_with_index do |l, i|
-      .tab-pane{role: "tabpanel", id: "reading-#{l.key}", class: ('active' if i == 0)}
-        = render "documentation/reading_secret_values/#{l.key}"
+= render "language_tabs", id_prefix: 'reading', path: 'documentation/reading_secret_values'
 
 :markdown
   ### Examples
