--- a/app/views/documentation/api.html.haml
+++ b/app/views/documentation/api.html.haml
@@ -14,7 +14,7 @@
 
 %h2 Parameters
 
--# TODO Write this whole form in a more concise way using the magic of simple_form
+-# TODO: Write this whole form in a more concise way using the magic of simple_form
 = simple_form_for @scraper, html: {class: "form-horizontal"} do |f|
   .string.input.optional.stringish.form-group#scraper_full_name_input
     %label.control-label.col-sm-1(for="scraper_full_name") [scraper]
