--- a/app/views/scrapers/_scraper_base.html.haml
+++ b/app/views/scrapers/_scraper_base.html.haml
@@ -4,7 +4,7 @@
       - unless scraper.language.blank?
         %small.scraper-lang.pull-right= scraper.language.human
       .icon-box.pull-right= render partial: "scrapers/auto_clock", locals: {scraper: scraper}
-      -# TODO Refactor this so that we're not duplicating logic of checking queued and running
+      -# TODO: Refactor this so that we're not duplicating logic of checking queued and running
       -# here as well as in "scrapers/running_indicator" partial
       - if scraper.queued? || scraper.running?
         .icon-box.pull-right= render partial: "scrapers/running_indicator", locals: {scraper: scraper}
