--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -9,7 +9,7 @@
       = link_to "morph.io", root_path, class: "navbar-brand"
     .collapse.navbar-collapse
       %ul.nav.navbar-nav
-        -# TODO set class to "active" when this is the current page
+        -# TODO: set class to "active" when this is the current page
         %li.dropdown{class: ("disabled" unless can? :new, Scraper)}
           = link_to "#", class: "dropdown-toggle", data: {toggle: ("dropdown" if can? :new, Scraper)} do
             Add Scraper
