--- a/app/views/supporters/_plan_action.html.haml
+++ b/app/views/supporters/_plan_action.html.haml
@@ -1,7 +1,8 @@
 - if current_user.plan == plan
   = button_tag class: "btn btn-default btn-lg", disabled: true do
     %i.fa.fa-check.text-success
-    Signed up
+    You're a
+    = current_user.plan.name
 - else
   = button_tag plan_change_word(current_user.plan, plan),
                class: "btn btn-default btn-lg",
