--- a/app/views/supporters/_plan_action.html.haml
+++ b/app/views/supporters/_plan_action.html.haml
@@ -1,5 +1,5 @@
 - if !user_signed_in?
-  = link_to "Signup", new_supporter_path(plan_id: plan.stripe_plan_id), class: "btn btn-default btn-lg"
+  = link_to plan_change_word(Plan.new(nil), plan), new_supporter_path(plan_id: plan.stripe_plan_id), class: "btn btn-default btn-lg"
 - elsif current_user.plan == plan
   = button_tag class: "btn btn-default btn-lg", disabled: true do
     %i.fa.fa-check.text-success
